# phuongpv-autotests

./: .editorconfig  .env.template  .gitignore  .gitlint  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
invocations/: __init__.py  linters.py  pre_commit.py  project.py  system.py
src/api/: __init__.py  decorators.py  posts.py
src/api_factories/: api_factory.py  cache_decorators.py  user_factory.py  utils.py
src/pages/: base_components.py  base_pages.py  caching.py  utils.py
src/pages/auth/: __init__.py  profile_page.py  sign_in_page.py
src/pages/common/: base_field.py  fields.py
src/pages/common/fields_components/: __init__.py  input.py
src/pages/posts/: post_create_page.py  post_details_page.py
src/plugins/: README.md  storage.py
src/plugins/selenium_plugin/: README.md  cache_decorators.py  collect_browser_screenshots_plugin.py  plugin.py  selenium_plugin.py
src/tests/: conftest.py
src/tests/auth/: conftest.py  test_login.py
src/tests/posts/: conftest.py  test_create_post.py
