[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.13"
pytest = "^9.0.1"
pomcorn = "^0.10.2"
phuongpv-blog-api-client = {git = "git@github.com:JoshepPhuong/phuongpv-blog-api-client.git"}
pytest-xdist = "^3.6.1"
pytest-timeout = "^2.3.1"
# A pytest plugin to add markers based on fixtures used.
# https://github.com/rciorba/pytest-fixture-marker
pytest-fixture-marker = "^1.0.0"
requests = "^2.32.3"
tenacity = "^9.1.2"
faker = "^37.1.0"
boto3 = "^1.37.27"
python-slugify = "^8.0.4"
# A library used to defuse XML bombs and other exploits
# https://github.com/tiran/defusedxml
defusedxml = "^0.7.1"
# A pytest plugin that allows multiple failures per test
# https://pypi.org/project/pytest-check/
pytest-check = "^2.5.1"


# Dependencies required to build project and run linters
[tool.poetry.group.local.dependencies]
pre-commit = "^4.2.0"
invoke = "^2.2.1"
rich = "^13.9.4"
ruff = "^0.11.3"
mypy = "^1.14.1"
pytest-deadfixtures = "^2.2.1"
pytest-dotenv = "^0.5.2"
selenium = "^4.30.0"
tzdata = "^2025.2"
gitlint = "^0.19.1"
# Required stubs for dateutil
# https://mypy.readthedocs.io/en/stable/running_mypy.html#library-stubs-not-installed
types-python-dateutil = "^2.9.0.20241206"


[tool.poetry.group.development.dependencies]
ipython = "^9.0.2"
ipdb = "^0.13.13"
types-requests = "^2.32.0.20250306"
pytest-repeat = "^0.9.3"
pytest-sugar = "^1.0.0"
poetry-plugin-up = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = "src" # See details about project structure in README.md
python_files = "tests/*.py"
log_cli = 1
addopts = [ # cspell:disable-line
    # Allow use of ipdb during tests
    "--capture=no",
    # Specify browser (chrome by default)
    # "--webdriver=",
    # Commented for quick toggle remote mode
    # "--webdriver-remote",
    # Specify window size
    # "--webdriver-window-size=1920,1080",
    # How much to wait to render element
    "--webdriver-implicitly-wait=2",
    # Raise error on unknown markers
    "--strict-markers",
    # Commented for quick toggle caching
    # "--use-cache",
    # Use `loadscope` test distribution strategy for pytest-xdist
    # https://pytest-xdist.readthedocs.io/en/stable/distribution.html
    # See README for details
    "--dist=loadscope",
]


[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"
src = ["src"]                                                    # See details about project structure in README.md
exclude = ["config", ".venv", "venv", "plugins/selenium_plugin"]

[tool.ruff.lint]
extend-select = [
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "W",
    "E",
    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "C90",
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I",
    # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "N",
    # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "D",
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP",
    # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "ANN",
    # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "S",
    # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "B",
    # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "A",
    # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "COM",
    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "C4",
    # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "DTZ",
    # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
    "T10",
    # https://docs.astral.sh/ruff/rules/#flake8-django-dj
    "DJ",
    # https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "T20",
    # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PT",
    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SIM",
    # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "PTH",
    # https://docs.astral.sh/ruff/rules/#flake8-todos-td
    "TD",
    # https://docs.astral.sh/ruff/rules/#eradicate-era
    "ERA",
    # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "RUF",
]

ignore = [
    # https://docs.astral.sh/ruff/rules/missing-type-args/
    "ANN002",
    # https://docs.astral.sh/ruff/rules/missing-type-kwargs/
    "ANN003",
    # https://docs.astral.sh/ruff/rules/any-type/
    "ANN401",
    # https://docs.astral.sh/ruff/rules/missing-return-type-special-method/
    "ANN204",
    # https://docs.astral.sh/ruff/rules/function-call-in-default-argument/
    "B008",
    # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D100",
    # https://docs.astral.sh/ruff/rules/undocumented-public-init/
    "D107",
    # https://docs.astral.sh/ruff/rules/undocumented-public-package/
    "D104",
    # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
    "D105",
    # https://docs.astral.sh/ruff/rules/undocumented-public-nested-class/
    "D106",
    # https://docs.astral.sh/ruff/rules/one-blank-line-before-class/
    "D203",
    # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/
    "D213",
    # https://docs.astral.sh/ruff/rules/dashed-underline-after-section/
    "D407",
    # https://docs.astral.sh/ruff/rules/call-datetime-today/
    "DTZ002",
    # https://docs.astral.sh/ruff/rules/error-suffix-on-exception-name/
    "DTZ005",
    # https://docs.astral.sh/ruff/rules/datetime-min-max/
    "DTZ901",
    # https://docs.astral.sh/ruff/rules/call-datetime-now-without-tzinfo/
    "N818",
    # https://docs.astral.sh/ruff/rules/invalid-module-name/
    "N999",
    # https://docs.astral.sh/ruff/rules/hardcoded-password-default/
    "S107",
    # https://docs.astral.sh/ruff/rules/missing-todo-author/
    "TD002",
    # https://docs.astral.sh/ruff/rules/missing-todo-link/
    "TD003",
    # https://docs.astral.sh/ruff/rules/unnecessary-collection-call/
    "C408",
    # https://docs.astral.sh/ruff/rules/mutable-class-default/
    "RUF012",
    # https://docs.astral.sh/ruff/rules/undocumented-public-method/
    "D102",
    # https://docs.astral.sh/ruff/rules/undocumented-public-function/
    "D103",
    # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star/
    "F403",
    # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star-usage/
    "F405",
    # https://docs.astral.sh/ruff/rules/suspicious-non-cryptographic-random-usage/
    "S311",
    # https://docs.astral.sh/ruff/rules/call-datetime-strptime-without-zone/
    "DTZ007",
    # https://docs.astral.sh/ruff/rules/assert/
    "S101",
    # https://docs.astral.sh/ruff/rules/non-pep695-type-alias/
    "UP040",
]


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    # https://docs.astral.sh/ruff/rules/unused-import/
    "F401",
]
"**/tests/*" = [
    # https://docs.astral.sh/ruff/rules/assert/
    "S101",
    # https://docs.astral.sh/ruff/rules/suspicious-non-cryptographic-random-usage/
    "S311",
]
"**/conftest.py" = [
    # https://docs.astral.sh/ruff/rules/assert/
    "S101",
]
"**/test_*" = [
    # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function/
    "ANN201",
]
"src/api_factories/*" = [
    # https://docs.astral.sh/ruff/rules/assert/
    "S101",
]


[tool.ruff.lint.isort]
force-wrap-aliases = true
split-on-trailing-comma = true
section-order = [
    "future",
    "standard-library",
    "pomcorn",
    "third-party",
    "first-party",
    "pages",
    "local-folder",
]


[tool.ruff.lint.isort.sections]
pomcorn = ["pomcorn"]
pages = ["pages"]


[tool.ruff.lint.pyflakes]
# Ruff isn't smart enough for generics: https://github.com/astral-sh/ruff/issues/9298
# Generic component which maybe used with `ClassName` should be defined here.
# Note that you should add the class here like you would import it into some module.
# to avoid explicit ignoring F401 rule in import
# https://docs.astral.sh/ruff/settings/#lint_pyflakes_extend-generics
extend-generics = [
    "pages.base_pages.BlogPage",
    "pomcorn.Component",
    "pomcorn.ListComponent",
]


[tool.ruff.lint.flake8-builtins]
# Modules to allow standard-library module shadowing rule (A005)
# https://docs.astral.sh/ruff/rules/stdlib-module-shadowing/#stdlib-module-shadowing-a005
builtins-allowed-modules = ["types", "secrets", "dataclasses"]


[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "list"
parametrize-values-type = "list"
parametrize-values-row-type = "list"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
ignore_missing_imports = true
strict = false
warn_no_return = false
disable_error_code = ["override", "no-redef"]
check_untyped_defs = true
disallow_any_generics = true
exclude = ["config", "venv", ".venv"]
mypy_path = ["src"]                           # See details about project structure in README.md
namespace_packages = false                    #  See details about project structure in README.md

[tool.docformatter]
wrap-descriptions = 0
wrap-summaries = 100
in-place = true
blank = true
